관리자모드 API 수정